# chronobind

./: .gitignore  Cargo.toml  README.md  TODOs.md  build.rs
assets/: chronobind.dtd
proto/: productdb.proto
src/: cli.rs  config.rs  files.rs  lua_table_parser.rs  main.rs  palette.rs  terminal.rs  tui_log.rs  wow.rs
src/backend/: mod.rs  task.rs  zip_rw.rs
src/popups/: backup_manager_popup.rs  backup_popup.rs  branch_popup.rs  confirm_popup.rs  export_manager_popup.rs  mod.rs  options_popup.rs  paste_popup.rs  progress_popup.rs  restore_popup.rs
src/ui/: character.rs  main_character_ui.rs  messages.rs  mod.rs
src/widgets/: character_list.rs  console.rs  file_list.rs  mod.rs  popup.rs  text_input.rs
