[package]
name = "chronobind"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"

# Terminal UI.
ratatui = { version = "0.29.0", features = [
    "all-widgets",
] }
color-eyre = "0.6.5"

# Logging..
log = "0.4.20"

# Protobuf.. 
prost = "0.14"
prost-types = "0.14"

# Operating system specific directories (e.g. /ProgramData, etc.)
directories = "6.0.0"

# Compile-time string formatting.
const_format = "0.2.35"

[build-dependencies]
prost-build = "0.14"