[package]
name = "chronobind"
version = "0.1.0"
edition = "2024"

[features]
default = ["better-colours", "windows_terminal"]
windows_terminal = []
better-colours = []

[dependencies]
itertools = "0.14.0"

# Terminal UI.
ratatui = { version = "0.30.0", features = [
    "all-widgets",
] }
color-eyre = "0.6.5"
strum = { version = "0.27.2", features = ["derive"] }

# Logging..
log = "0.4.20"

# Protobuf.. 
prost = "0.14"
prost-types = "0.14"

# Date & time..
chrono = "0.4.42"

# Reading and writing ZIP files.
zip = "7.0.0"

# Compile-time string formatting.
const_format = "0.2.35"

# Operating system specific directories (e.g. /ProgramData, etc.)
directories = "6.0.0"

# Serialization.
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[build-dependencies]
prost-build = "0.14"

[profile.release]
lto = "fat"
codegen-units = 1